5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1791_1593.log
== TEST (2019-05-29 14:09:49) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:10:02) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:15:42) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
while(c>q):
	r = v[1]
	print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:36) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
print(q)
while(c>q):
	r = v[0]
	print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:43) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
while(c>q):
	r = v[0]
	print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:56) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
while(c>q):
	r = v[0]
	print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:18:34) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
while(c>q):
	r = v[0]
	c= c+1
	print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:18:40) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
while(c>q):
	r = v[0]
	c= c+1
	print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:18:50) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
while(c>q):
	r = v[0]
	c= c+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:19:03) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
while(c>q):
	r = v[0]
	c= c+1
	print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:19:09) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
while(c>q):
	r = v[0]
	c= c+1
	print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:34:14) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
print(v[0])
while(c>q):
	r = 
	c= c+1
-- ERROR:
File "XXXX", line 8
    r = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:34:26) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
print(v0[cont])
while(c>q):
	r = 
	c= c+1
-- ERROR:
File "XXXX", line 8
    r = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:34:39) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
print(v[cont])
while(c>q):
	r = 
	c= c+1
-- ERROR:
File "XXXX", line 8
    r = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:34:46) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
print(v[cont])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:35:02) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
print(v[0])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:39:12) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
while(c==q):
	r = v[0] * t
	t = t + 1
	c = c + 1
	print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:39:51) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
while(c==q):
	r = v[0] * t
	t = t + 1
	c = c + 1
	print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:39:51) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
while(c==q):
	r = v[0] * t
	t = t + 1
	c = c + 1
	print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:39:51) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
while(c==q):
	r = v[0] * t
	t = t + 1
	c = c + 1
	print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:39:51) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
while(c==q):
	r = v[0] * t
	t = t + 1
	c = c + 1
	print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:09) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
while(c==q):
	r = v[0] * t
	
	c = c + 1
	print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:24) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
while(c==q):
	r = v[0] * t
	
	c = c + 1
	print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:44) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
while(c==q):
	r = v[0] * t
	c = c + 1
	print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:13) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
while(c==q):
	r = v[0] * t
	c = c + 1
	print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:43:12) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
while(q>c):
	r = v[0] * t
	c = c + 1
	print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:43:30) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
while(q>c):
	r = v[0] * t
	c = c + 1
	print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:45:05) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	c = c + 1
	print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:45:40) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	print(r)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:45:51) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	print(r)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:48:02) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	h = array(eval(r))
print(h)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:48:21) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	h = array(eval(r))
	print(h)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:48:37) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	h = array(r)
	print(h)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:49:31) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	h = array([r])
	print(h)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:50:05) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
h = array([r])
	print(h)

-- ERROR:
File "XXXX", line 13
    print(h)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:50:07) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
h = array([r])
print(h)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:54:31) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0

while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	s = r + r
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:54:55) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0

while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	s = r + r
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:56:29) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0

while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:56:44) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0

while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:58:20) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0

while(q<c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:58:44) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0

while(q<c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:02) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0

while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:00:14) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
	print(f)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:00:58) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
	y = f / q
	print(f)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:01:14) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
	y = f / q
	print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:01:25) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
	y = f / q
	print(y)

-- EXECUTION TIME:
0.426612
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
0.875
3.675
9.495000000000001
11.495000000000001
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
0.5
1.5
2.625
2.625
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
1.0
3.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:01:32) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
	y = f / q
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:01:40) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
	y = f / q
print(y)

-- EXECUTION TIME:
0.303308
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
11.495000000000001
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
2.625
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
3.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:01:58) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
	y = f / q
print(round(y, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:02:09) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
	y = f / q
print(round(y, 2))

-- EXECUTION TIME:
0.454367
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
11.5
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
2.62
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
3.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:43) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
	y = f / q
print(round(y, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:04:38) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
	y = f / q
print(round(y, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:06:33) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
y = f / q
print(round(y, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:06:45) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
y = f / q
print(round(y, 2))

-- EXECUTION TIME:
0.489861
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
11.5
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
2.62
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
3.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:06:57) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
y = f / q
print(round(y, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:09:12) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
y = f / q
print(round(y, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:31:00) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
y = f / q
print(round(y, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:32:32) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
y = f / q
print(round(y, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:32:43) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
y = f / q
print(round(y, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:35:15) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
y = f / q
print(round(y, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:35:26) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
y = f / q
print(round(y, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:35:35) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
y = f / q
print(round(y, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:36:49) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
y = f / q
print(round(y, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:36:57) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
y = f / q
print(round(y, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:37:04) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
y = f / q
print(round(y, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:37:11) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
y = f / q
print(round(y, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:40:31) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
g = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
	g = g + t
y = f / g
print(round(y, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:40:44) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
g = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	t = t + 1
	c = c + 1
	f = f + r
	g = g + t
y = f / g
print(round(y, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:42:14) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
g = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	g = g + t
	t = t + 1
	c = c + 1
	f = f + r
y = f / g
print(round(y, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:42:29) 
-- CODE:
from numpy import*
v = array(eval(input("entrada:")))
t = 1 
c = 0
q = size(v)
s = 0
f = 0
g = 0
while(q>c):
	r = v[s] * t
	s = s + 1
	g = g + t
	t = t + 1
	c = c + 1
	f = f + r
y = f / g
print(round(y, 2))

-- EXECUTION TIME:
0.445385
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
1.05
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
2.53
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
